--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
+ compile 'com.android.support:appcompat-v7:25.0.0'
+
+    compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.google.firebase:firebase-crash:9.8.0'
+    compile 'com.google.firebase:firebase-auth:9.8.0'
+    compile 'com.firebaseui:firebase-ui:0.4.4'
+    compile 'com.firebase:firebase-client-android:2.5.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:9.8.0'
 }
 
 
